--- a/PROJECTS.css
+++ b/PROJECTS.css
@@ -430,4 +430,9 @@
     margin-right: initial;
     margin-left: initial;
   }
+}@font-face {
+  font-family: 'LunchBox';
+  font-style: normal;
+  font-weight: 400;
+  src: url(fonts/LunchBox.woff);
 }
